@@ -255,6 +255,14 @@ sub remove_end_filter {
     return $self;
 }
 
+sub remove_filter {
+    my $self = shift;
+    
+    $self->{filter} = {};
+    
+    return $self;
+}
+
 # Deprecated
 sub default_filter {
     my $self = shift;
@@ -441,6 +449,12 @@ L<DBIx::Custom>.
     $result->remove_end_filter;
 
 Remove end filter.
+
+=head2 C<(experimental) remove_filter>
+
+    $result->remove_filter;
+
+Remove filter. End filter is not removed.
 
 =head2 C<(experimental) stash>
 
