@@ -875,16 +875,18 @@ $result->end_filter(key1 => undef);
 $row = $result->fetch_hash_first;
 is_deeply($row, {key1 => 1, key2 => 40}, 'apply_filter overwrite');
 
-test 'remove_end_filter';
+test 'remove_end_filter and remove_filter';
 $dbi = DBIx::Custom->connect($NEW_ARGS->{0});
 $dbi->execute($CREATE_TABLE->{0});
 $dbi->insert(table => 'table1', param => {key1 => 1, key2 => 2});
 $result = $dbi->select(table => 'table1');
-$result->filter(key1 => sub { $_[0] * 2 }, key2 => sub { $_[0] * 4 });
-$row = $result->end_filter(key1 => sub { $_[0] * 3 }, key2 => sub { $_[0] * 5 })
+$row = $result
+       ->filter(key1 => sub { $_[0] * 2 }, key2 => sub { $_[0] * 4 })
+       ->remove_filter
+       ->end_filter(key1 => sub { $_[0] * 3 }, key2 => sub { $_[0] * 5 })
        ->remove_end_filter
        ->fetch_first;
-is_deeply($row, [2, 8]);
+is_deeply($row, [1, 2]);
 
 test 'empty where select';
 $dbi = DBIx::Custom->connect($NEW_ARGS->{0});
